--- a/index.html
+++ b/index.html
@@ -11,15 +11,27 @@
     <!-- logo - svariati link - login -->
     <header >
         <div class="contenitore-header">
-            <div class="riga-header border">
-                <div class="colonne-header piccole-25 border">
-                    <div>Logo</div>
+            <div class="riga-header">
+                <div class="colonne-header piccole-25 ">
+                    <div>
+                        <img src="./img/logo.svg" alt="Logo discord" id="logo-discord">
+                    </div>
                 </div>
-                <div class="colonne-header grande-50 border">
-                    <div>link link link link link</div>
+                <div class="colonne-header grande-50 ">
+                    <div>
+                        <ul>
+                            <li><a href="www.google.it">Scarica</a></li>
+                            <li><a href="www.google.it">Perché Discord</a></li>
+                            <li><a href="www.google.it">Nitro</a></li>
+                            <li><a href="www.google.it">Sicurezza</a></li>
+                            <li><a href="www.google.it">Assistenza</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="colonne-header piccole-25 scritta-destra border">
-                    <div>Login</div>
+                <div class="colonne-header piccole-25 scritta-destra ">
+                    <div>
+                        <button class="bottone">Accedi</button>
+                    </div>
                 </div>
             </div>
         </div>
