fatto contenitore blu con dentroUnContenitoreRosa

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="colonne-header piccole-25 scritta-destra ">
                     <div>
-                        <button class="bottone">Accedi</button>
+                        <button class="bottone sfondo-bianco">Accedi</button>
                     </div>
                 </div>
             </div>
@@ -44,9 +44,16 @@
     <!-- format 4 - 1 colonna + sfondo-->
     <main>
         <!-- contenitore blu con dentro un contenitore rosa  -->
-        <div class="contenitore blu-main">
+        <div class="contenitore-foto sfondo-alto">
             <div class="riga">
-                <div class="colonna rosa-main border"></div>
+                <div class=" rosa-main ">
+                    <h2 class="titolo-main">Il tuo posto per parlare</h2>
+                    <p class="p-main">Che tu faccia parte di un clup scolastico, gruppo di gamer, comunità artistica <br>mondiale, o semplicemnte di un piccolo gruppo di amici che vuole passare il tempo <br>assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <div class="contenitore-bottoni">
+                        <button class="bottone-grande grassetto ">&#8595; Scarica per Mac</button>
+                        <button class="bottone-grande grassetto sfondo-nero ">Apri Discord nel tuo browser</button>
+                    </div>
+                </div>
             </div>
         </div>
 
