--- a/index.html
+++ b/index.html
@@ -60,16 +60,30 @@
         <!-- Format 1 - 2 colonne -->
         <div class="contenitore">
             <div class="riga-larghezza-minore">
-                <div class="colonna celeste border"></div>
-                <div class="colonna rosa border"></div>
+                <div class="colonna celeste border">
+                    <img src="./img/item1.svg" alt="dimostrazione di come sono i canali telematici" id="img-item1">
+                </div>
+                <div class="colonna rosa border">
+                    <div>
+                        <h2 class="titolo-format">Un luogo a <br> invito con tutto <br> lo spazio <br> necessario <br> per parlare</h2>
+                        <p class="p-format">I server Discord sono organizzati in canali telematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- format 2 - 2 colonne + sfondo-->
         <div class="contenitore sfondo-grigio">
             <div class="riga-larghezza-minore">
-                <div class="colonna rosa border"></div>
-                <div class="colonna celeste border"></div>
+                <div class="colonna rosa border">
+                    <div>
+                        <h2 class="titolo-format">Dove trovarsi é <br>facile</h2>
+                        <p class="p-format">Mettiti comodo in un canale vocale <br>quando hai tempo. Gli amici nel tuo <br> server possono vedere che sei lì e unirsi <br> instantaneamente senza dover chiamare.</p>
+                    </div>
+                </div>
+                <div class="colonna celeste border">
+                    <img src="./img/item2.svg" alt="finestra voice connected">
+                </div>
             </div>
         </div>
 
