--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="contenitore">
             <div class="riga-larghezza-minore">
                 <div class="colonna celeste border">
-                    <img src="./img/item1.svg" alt="dimostrazione di come sono i canali telematici" id="img-item1">
+                    <img src="./img/item1.svg" alt="dimostrazione di come sono i canali telematici" class="img-format">
                 </div>
                 <div class="colonna rosa border">
                     <div>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="colonna celeste border">
-                    <img src="./img/item2.svg" alt="finestra voice connected">
+                    <img src="./img/item2.svg" alt="finestra voice connected" class="img-format">
                 </div>
             </div>
         </div>
