format 3 - 2 colonne aggiunto contenuto

--- a/index.html
+++ b/index.html
@@ -90,8 +90,15 @@
         <!-- format 3 - 2 colonne -->
         <div class="contenitore">
             <div class="riga-larghezza-minore">
-                <div class="colonna celeste border"></div>
-                <div class="colonna rosa border"></div>
+                <div class="colonna celeste border">
+                    <img src="./img/item3.svg" alt="Dimostrazione strumenti" class="img-format">
+                </div>
+                <div class="colonna rosa border">
+                    <div>
+                        <h2 class="titolo-format">Da pochi a un <br>fandom</h2>
+                        <p class="p-format">Dai inizio a una community di qualsiasi <br> dimensione con strumenti di <br> moderazione e accesso ai membri <br> personalizzabile. Concedi ai membri <br> poteri speciali, crea canali privati, e <br> molto altro.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
