--- a/index.html
+++ b/index.html
@@ -105,7 +105,17 @@
         <!-- format 4 - 1 colonna + sfondo -->
         <div class="contenitore-grande sfondo-grigio">
             <div class="riga">
-                <div class="colonna-grande border"></div>
+                <div class="colonna-grande border">
+                    <div class="testo-centrale">
+                        <h2 class="titolo-format">Tecnologia affidabile per tenersi in contatto</h2>
+                        <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                        <img src="./img/item4-big.svg" alt="Dimostrazione chiamate video" class="img-grande">
+                        <div class="bg-stelline">
+                            <h3 class="testo-centrale">Pronto a iniziare la tua nuova avventura?</h3>
+                        </div>
+                        <button class="bottone-grande grassetto bg-viola ">&#8595; Scarica per Mac</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
