sfondo nero + 5 colonne contenuto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="riga-header">
                 <div class="colonne-header piccole-25 ">
                     <div>
-                        <img src="./img/logo.svg" alt="Logo discord" id="logo-discord">
+                        <img src="./img/logo.svg" alt="Logo discord" class="logo-discord">
                     </div>
                 </div>
                 <div class="colonne-header grande-50 ">
@@ -113,7 +113,7 @@
                         <div class="bg-stelline">
                             <h3 class="testo-centrale">Pronto a iniziare la tua nuova avventura?</h3>
                         </div>
-                        <button class="bottone-grande grassetto bg-viola ">&#8595; Scarica per Mac</button>
+                        <button class="bottone-grande grassetto bg-viola colore-bianco ">&#8595; Scarica per Mac</button>
                     </div>
                 </div>
             </div>
@@ -126,23 +126,80 @@
         <!-- sfondo nero + 5 colonne -->
         <div class="contenitore sfondo-nero" id="margin-bottom-grigio">
             <div class="riga-larghezza-minore">
-                <div class="colonna colonna-grande-footer border margin-top"></div>
-                <div class="colonna colonna-footer border-bianco margin-top"></div>
-                <div class="colonna colonna-footer border-bianco margin-top"></div>
-                <div class="colonna colonna-footer border-bianco margin-top"></div>
-                <div class="colonna colonna-footer border-bianco margin-top"></div>
+                <div class="colonna colonna-grande-footer border margin-top">
+                    <div>
+                        <h3 class="titolo-footer colore-viola">Il tuo posto per parlare</h3>
+                        <div>Italiano</div>         <!-- cercare di capire come mettere il resto -->
+                    </div>
+                </div>
+                <div class="colonna colonna-footer border-bianco margin-top">
+                    <div>
+                        <ul>
+                            <li class="colore-viola">Prodotto</li>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="colonna colonna-footer border-bianco margin-top">
+                    <div>
+                        <ul>
+                            <li class="colore-viola">Compagnia</li>
+                            <li>Chi siamo</li>
+                            <li>Lavora con noi</li>
+                            <li>Marchio</li>
+                            <li>Redazione</li>
+                            <li>Negozio</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="colonna colonna-footer border-bianco margin-top">
+                    <div>
+                        <ul>
+                            <li class="colore-viola">Risorse</li>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="colonna colonna-footer border-bianco margin-top">
+                    <ul>
+                        <li class="colore-viola">Norme</li>
+                        <li>Scarica</li>
+                        <li>Perché Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
 
         <!-- rettangolo con due div agli estremi -->
         <div class="contenitore-footer sfondo-nero">
-            <div class="riga-larghezza-minore sfondo-colore-acqua spazio-between">
-                <div class="sfondo-rosa border">
-                    <div class="contenuto">Logo</div>
+            <div class="riga-larghezza-minore spazio-between">
+                <div class="">
+                    <div>
+                        <img src="./img/logo.svg" alt="Logo discord" class="logo-discord">
+                    </div>
                 </div>
-                <div class="sfondo-rosa border">
-                    <div class="contenuto">bottone</div>
+                <div >
+                    <div>
+                        <button class="bottone bg-viola colore-bianco">Registrati</button>
+                    </div>
                 </div>
             </div>
         </div>
