Tolto le altezze

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <div class="colonne-header grande-50 ">
                     <div>
                         <ul>
-                            <li><a href="www.google.it">Scarica</a></li>
-                            <li><a href="www.google.it">Perché Discord</a></li>
-                            <li><a href="www.google.it">Nitro</a></li>
-                            <li><a href="www.google.it">Sicurezza</a></li>
-                            <li><a href="www.google.it">Assistenza</a></li>
+                            <li class="li-header"><a href="www.google.it">Scarica</a></li>
+                            <li class="li-header"><a href="www.google.it">Perché Discord</a></li>
+                            <li class="li-header"><a href="www.google.it">Nitro</a></li>
+                            <li class="li-header"><a href="www.google.it">Sicurezza</a></li>
+                            <li class="li-header"><a href="www.google.it">Assistenza</a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
         <!-- contenitore blu con dentro un contenitore rosa  -->
         <div class="contenitore-foto sfondo-alto">
             <div class="riga">
-                <div class=" rosa-main ">
+                <div class=" rosa-main testo-centrato-verticale">
                     <h2 class="titolo-main">Il tuo posto per parlare</h2>
                     <p class="p-main">Che tu faccia parte di un clup scolastico, gruppo di gamer, comunità artistica <br>mondiale, o semplicemnte di un piccolo gruppo di amici che vuole passare il tempo <br>assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="contenitore-bottoni">
@@ -124,8 +124,8 @@
     <!-- rettangolo con due div agli estremi -->
     <footer>
         <!-- sfondo nero + 5 colonne -->
-        <div class="contenitore sfondo-nero" id="margin-bottom-grigio">
-            <div class="riga-larghezza-minore">
+        <div class="contenitore sfondo-nero" >
+            <div class="riga-larghezza-minore" id="margin-bottom-grigio">
                 <div class="colonna colonna-grande-footer border margin-top">
                     <div>
                         <h3 class="titolo-footer colore-viola">Il tuo posto per parlare</h3>
