--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <div class="riga">
                 <div class=" rosa-main testo-centrato-verticale">
                     <h2 class="titolo-main">Il tuo posto per parlare</h2>
-                    <p class="p-main">Che tu faccia parte di un clup scolastico, gruppo di gamer, comunità artistica <br>mondiale, o semplicemnte di un piccolo gruppo di amici che vuole passare il tempo <br>assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <p class="p-main">Che tu faccia parte di un clup scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemnte di un piccolo gruppo di amici che vuole passare il tempoassieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="contenitore-bottoni">
                         <button class="bottone-grande grassetto ">&#8595; Scarica per Mac</button>
-                        <button class="bottone-grande grassetto sfondo-nero ">Apri Discord nel tuo browser</button>
+                        <button class="bottone-grande grassetto sfondo-nero ">Apri Discord nel tuwser</button>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="colonna rosa border">
                     <div>
-                        <h2 class="titolo-format">Un luogo a <br> invito con tutto <br> lo spazio <br> necessario <br> per parlare</h2>
+                        <h2 class="titolo-format">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                         <p class="p-format">I server Discord sono organizzati in canali telematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
                 </div>
@@ -77,8 +77,8 @@
             <div class="riga-larghezza-minore">
                 <div class="colonna rosa border">
                     <div>
-                        <h2 class="titolo-format">Dove trovarsi é <br>facile</h2>
-                        <p class="p-format">Mettiti comodo in un canale vocale <br>quando hai tempo. Gli amici nel tuo <br> server possono vedere che sei lì e unirsi <br> instantaneamente senza dover chiamare.</p>
+                        <h2 class="titolo-format">Dove trovarsi é facile</h2>
+                        <p class="p-format">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo  server possono vedere che sei lì e unirsi  instantaneamente senza dover chiamare.</p>
                     </div>
                 </div>
                 <div class="colonna celeste border">
@@ -95,8 +95,8 @@
                 </div>
                 <div class="colonna rosa border">
                     <div>
-                        <h2 class="titolo-format">Da pochi a un <br>fandom</h2>
-                        <p class="p-format">Dai inizio a una community di qualsiasi <br> dimensione con strumenti di <br> moderazione e accesso ai membri <br> personalizzabile. Concedi ai membri <br> poteri speciali, crea canali privati, e <br> molto altro.</p>
+                        <h2 class="titolo-format">Da pochi a un fandom</h2>
+                        <p class="p-format">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 <div class="colonna-grande border">
                     <div class="testo-centrale">
                         <h2 class="titolo-format">Tecnologia affidabile per tenersi in contatto</h2>
-                        <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                        <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                         <img src="./img/item4-big.svg" alt="Dimostrazione chiamate video" class="img-grande">
                         <div class="bg-stelline">
                             <h3 class="testo-centrale">Pronto a iniziare la tua nuova avventura?</h3>
