--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <!-- rettangolo con due div agli estremi -->
     <footer>
         <!-- sfondo nero + 5 colonne -->
-        <div class="contenitore sfondo-nero" >
-            <div class="riga-larghezza-minore" id="margin-bottom-grigio">
+        <div class="contenitore-footer sfondo-nero" >
+            <div class="riga-larghezza-minore padding-bottom-25 " id="margin-bottom-grigio">
                 <div class="colonna colonna-grande-footer border margin-top">
                     <div>
                         <h3 class="titolo-footer colore-viola">Il tuo posto per parlare</h3>
