correzzione button format 1

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p class="p-main">Che tu faccia parte di un clup scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemnte di un piccolo gruppo di amici che vuole passare il tempoassieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div class="contenitore-bottoni">
                         <button class="bottone-grande grassetto ">&#8595; Scarica per Mac</button>
-                        <button class="bottone-grande grassetto sfondo-nero ">Apri Discord nel tuwser</button>
+                        <button class="bottone-grande grassetto sfondo-nero ">Apri Discord nel tuo browser</button>
                     </div>
                 </div>
             </div>
